Bug 413093 - PyFalkon compilation fails with clang 9.0.0 (return type c linkage)
Summary: PyFalkon compilation fails with clang 9.0.0 (return type c linkage)
Status: RESOLVED FIXED
Alias: None
Product: Falkon
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: David Rosca
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-10-17 16:07 UTC by Chris Hills
Modified: 2019-10-31 10:10 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 3.1.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Chris Hills 2019-10-17 16:07:56 UTC
In file included from src/plugins/PyFalkon/pythonplugin.cpp:18:
src/plugins/PyFalkon/pythonplugin.h:24:42: error: 'pyfalkon_load_plugin' has C-linkage specified, but returns user-defined type 'Plugins::Plugin' which is incompatible with C [-Werror,-Wreturn-type-c-linkage]
extern "C" Q_DECL_EXPORT Plugins::Plugin pyfalkon_load_plugin(const QString &name);
                                         ^
src/plugins/PyFalkon/pythonplugin.h:26:51: error: 'pyfalkon_load_available_plugins' has C-linkage specified, but returns incomplete type 'QVector<Plugins::Plugin>' which could be incompatible with C [-Werror,-Wreturn-type-c-linkage]
extern "C" Q_DECL_EXPORT QVector<Plugins::Plugin> pyfalkon_load_available_plugins();
Comment 1 David Rosca 2019-10-31 10:10:25 UTC
Git commit bfb9420cbb8e248ba8452964f804a071ac151cda by David Rosca.
Committed on 31/10/2019 at 09:37.
Pushed by drosca into branch 'Falkon/3.1'.

PyFalkon: Fix C linkage issues
FIXED-IN: 3.1.1

M  +7    -4    src/lib/plugins/plugins.cpp
M  +10   -14   src/plugins/PyFalkon/pythonplugin.cpp
M  +2    -2    src/plugins/PyFalkon/pythonplugin.h

https://commits.kde.org/falkon/bfb9420cbb8e248ba8452964f804a071ac151cda