PyFalkon: Fix C linkage issues

BUG: 413093
FIXED-IN: 3.1.1